--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@900&display=swap" rel="stylesheet">
+    <link href="css/style.css"  rel="stylesheet">
     
     <title>Hello, world!</title>
   </head>
